Bumping to Java 24 (#36)
* Bumping to Java 24

Signed-off-by: Uday Bhaskar <udabhas@amazon.com>

* update DEVELOPER_GUIDE with Java24 changes

Signed-off-by: Uday Bhaskar <udabhas@amazon.com>

* remove enable-native-access arg

Signed-off-by: Uday Bhaskar <udabhas@amazon.com>

---------

Signed-off-by: Uday Bhaskar <udabhas@amazon.com>
Co-authored-by: Uday Bhaskar <udabhas@amazon.com>